# parakeet-tdt-0.6b-v3-basque

./: .env.example  .gitignore  Dockerfile.wasm  README.md  build-wasm.sh
.github/workflows/: pages.yml
config/: server.conf.example
docs/: bridge.js  index.html  index.html.bak  sw.js
docs/sherpa-wasm/: sherpa-onnx-wasm-main-asr.js
scripts/: 00_setup.sh  01_download_dataset.sh  01b_create_tarred_dataset.sh  02_baseline_eval.sh  03_finetune.sh  04_evaluate.sh  05_export.sh  06_export_onnx.sh  07_export_optimized_onnx.sh  08_upload_onnx_hf.py  baseline_eval.py  deploy.sh  evaluate_finetuned.py  export_model.py  export_onnx.py  export_onnx_asr.py  export_sherpa_onnx.py  finetune.py  inference.py  prepare_dataset.py  run_all.sh  streaming_inference.py
scripts/hf_cards/: onnx-asr-README.md  sherpa-onnx-README.md
wasm-asr/: Cargo.toml
wasm-asr/src/: lib.rs
